<resources>
    <string name="app_name">HairQueue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="register_title">Register</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="phone_hint">Phone Number</string>
    <string name="avatar_description">User avatar</string>
    <string name="text_view_1_text">First Text</string>
    <string name="text_view_2_text">Second Text</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="open_nav">"Open navigation drawer"</string>
    <string name="close_nav">"Close navigation drawer"</string>
</resources>